# embedded-dal

./: Cargo.toml  LICENSE  README.md  STM32F4.yml  build.rs  memory_stm32f469ni.x  pas_co2_stm32f469.slint  rust-toolchain.toml  window.slint
.cargo/: config.toml
src/: lib.rs
src/backends/: double_buffer_embassy.rs  mod.rs  slint_embassy.rs
src/drivers/: dsi.rs  ft6x36.rs  is42s32400f.rs  ltdc.rs  mod.rs
src/drivers/nt35510/: mod.rs
src/test_images/: mod.rs  rainbow.rs  rainbow_rgb.rs  systemscape_logo.rs
ui/: demo.slint  dislodged.slint  display_mock.slint  global_settings.slint  images.slint  side_bar.slint  theme.slint
ui/components/: float-button.slint  header.slint  menu-button.slint  menu-overview.slint  menu.slint  nav-button.slint  numeric-setting.slint  page-container.slint  page-scroll-view.slint
ui/pages/: balance_page.slint  controls_page.slint  dashboard_page.slint  device_list_page.slint  list_view_page.slint  manual-brew.slint  page.slint  pages.slint  selection.slint  test_list_page.slint  text_edit_page.slint
