[package]
name = "embedded-dal"
version = "0.0.0"
edition = "2021"
authors = [
    "Joel Schulz-Andres <joel@systemscape.de>",
    "Julian Dickert <julian@systemscape.de>",
]
description = "A display abstraction layer for embedded devices"
license = "MIT"
categories = ["no-std", "embedded", "visualization"]
readme = "README.md"

[features]
default = ["defmt", "event_process", "fmc", "stm32f469"]
serde = ["dep:serde"]
defmt = ["dep:defmt"]
event_process = []
fmc = ["dep:stm32-fmc"]
stm32f469 = ["dep:embedded-alloc"]


[dependencies]
embassy-stm32 = { git = "https://github.com/embassy-rs/embassy.git", rev = "3d8e987bf3ee8370b4532da73c9ba19ac0f437f7", features = [
    "defmt",
    "stm32f469ni",
    "unstable-pac",
    "time-driver-any",
    "exti",
] }
embassy-time = { git = "https://github.com/embassy-rs/embassy.git", rev = "3d8e987bf3ee8370b4532da73c9ba19ac0f437f7", features = [
    "defmt",
    "defmt-timestamp-uptime",
    "tick-hz-32_768",
    "generic-queue",
] }

embassy-executor = { git = "https://github.com/embassy-rs/embassy.git", rev = "3d8e987bf3ee8370b4532da73c9ba19ac0f437f7", features = [
    "task-arena-size-32768",
    "arch-cortex-m",
    "executor-thread",
    "executor-interrupt",
    "defmt",
    #"integrated-timers",

] }

embassy-embedded-hal = { git = "https://github.com/embassy-rs/embassy.git", rev = "3d8e987bf3ee8370b4532da73c9ba19ac0f437f7", features = [
    "defmt",
] }


embassy-sync = { git = "https://github.com/embassy-rs/embassy.git", rev = "3d8e987bf3ee8370b4532da73c9ba19ac0f437f7", features = [
    "defmt",
] }

embassy-futures = { git = "https://github.com/embassy-rs/embassy.git", rev = "3d8e987bf3ee8370b4532da73c9ba19ac0f437f7", features = [
    "defmt",
] }


embedded-hal = "1.0.0"
embedded-hal-async = "1.0.0"

static_cell = "2.1.0"

stm32-fmc = { version = "0.3.2", default-features = false, features = [
    "sdram",
], optional = true }


slint = { version = "1.8.0", default-features = false, features = [
    "compat-1-2",
    "renderer-software",
    "libm",
    "unsafe-single-threaded",
] }
embedded-alloc = { version = "0.6", optional = true, features = ["llff"] }

defmt = { version = "0.3", optional = true }
defmt-rtt = "0.4"

panic-probe = { version = "0.3", features = ["print-defmt"] }

cortex-m = { version = "0.7.6", features = [
    "inline-asm",
    "critical-section-single-core",
] }
cortex-m-rt = "0.7.0"

num_enum = { version = "0.7", default-features = false }

pas-co2-rs = "0.1.0-beta.1"

serde = { version = "1.0", optional = true }

[build-dependencies]
slint-build = { version = "1.8.0" }

[badges]
maintenance = { status = "actively-developed" }

[profile.release]
codegen-units = 1
debug = 2
incremental = false
lto = "fat"
opt-level = 's'
