[package]
authors = [
    "Joel Schulz-Andres <joel@systemscape.de>",
    "Julian Dickert <julian@systemscape.de>",
]
categories = ["embedded", "no-std", "visualization"]
description = "A display abstraction layer for embedded devices"
edition = "2024"
license = "MIT"
name = "embedded-dal"
readme = "README.md"
version = "0.0.0"

[features]
default = ["defmt", "event_process", "fmc", "stm32f469"]
defmt = ["dep:defmt"]
event_process = []
fmc = ["dep:stm32-fmc"]
serde = ["dep:serde"]
stm32f469 = ["dep:embedded-alloc"]


[dependencies]
embassy-embedded-hal = { version = "*", features = ["defmt"] }
embassy-executor = { version = "*", features = [
    "arch-cortex-m",
    "defmt",
    "executor-interrupt",
    "executor-thread",
    "task-arena-size-32768",
    #"integrated-timers",
] }
embassy-futures = { version = "*", features = ["defmt"] }
embassy-stm32 = { version = "*", features = [
    "defmt",
    "exti",
    "stm32f469ni",
    "time-driver-any",
    "unstable-pac",
] }
embassy-sync = { version = "*", features = ["defmt"] }
embassy-time = { version = "*", features = [
    "defmt",
    "defmt-timestamp-uptime",
    "generic-queue-8",
    "tick-hz-32_768",
] }

embedded-alloc = { version = "0.6", optional = true, features = ["llff"] }
embedded-hal = "1.0.0"
embedded-hal-async = "1.0.0"

static_cell = "2.1.0"

# embassy-stm32 still uses an older version, so we cannot upgrade to 0.4 (@2025-04-25)
stm32-fmc = { version = "0.3.2", default-features = false, features = [
    "sdram",
], optional = true }


defmt = { version = "1.0.1", optional = true }
defmt-rtt = "1.0.0"
panic-probe = { version = "1.0.0", features = ["print-defmt"] }

serde = { version = "1.0", optional = true }

num_enum = { version = "0.7", default-features = false }

cortex-m = { version = "0.7.6", features = [
    "critical-section-single-core",
    "inline-asm",
] }
cortex-m-rt = "0.7.0"

# Remember to change the version of slint-build, as well!
slint = { version = "1.11.0", default-features = false, features = [
    "compat-1-2",
    "libm",
    "renderer-software",
    "unsafe-single-threaded",
] }

pas-co2-rs = "0.1.0-beta.1"


[build-dependencies]
slint-build = { version = "1.11.0" }

[badges]
maintenance = { status = "actively-developed" }

[profile.dev]
debug = "full"

[profile.release]
codegen-units = 1
debug = 2
incremental = false
lto = "fat"
opt-level = 's'


[patch.crates-io]
embassy-embedded-hal = { git = "https://github.com/embassy-rs/embassy.git", rev = "9907f5683bc3d2c436e03143b32c20c41251f457" }
embassy-executor = { git = "https://github.com/embassy-rs/embassy.git", rev = "9907f5683bc3d2c436e03143b32c20c41251f457" }
embassy-futures = { git = "https://github.com/embassy-rs/embassy.git", rev = "9907f5683bc3d2c436e03143b32c20c41251f457" }
embassy-stm32 = { git = "https://github.com/embassy-rs/embassy.git", rev = "9907f5683bc3d2c436e03143b32c20c41251f457" }
embassy-sync = { git = "https://github.com/embassy-rs/embassy.git", rev = "9907f5683bc3d2c436e03143b32c20c41251f457" }
embassy-time = { git = "https://github.com/embassy-rs/embassy.git", rev = "9907f5683bc3d2c436e03143b32c20c41251f457" }
